# ibus

./: .gitignore  autogen.sh  configure.ac  ibus.service.in  meson.build  meson_options.txt
.github/workflows/: main.yml
bindings/: meson.build
bindings/pygobject/: meson.build
bindings/vala/: meson.build
bus/: Makefile.am  connection.h  dbusimpl.c  engineproxy.c  ibusimpl.c  ibusimpl.h  inputcontext.c  main.c  meson.build  org.freedesktop.IBus.service.in  server.c
client/: meson.build
client/gtk2/: ibusimcontext.c  meson.build
client/gtk3/: meson.build
client/gtk4/: meson.build
client/wayland/: Makefile.am  ibuswaylandim.c  ibuswaylandim.h  input-method-unstable-v2-client-protocol.h  input-method-unstable-v2-protocol.c  main.c  meson.build  virtual-keyboard-unstable-v1-client-protocol.h  virtual-keyboard-unstable-v1-protocol.c
client/x11/: Makefile.am  gdk-private.c  main.c  meson.build
conf/: meson.build
conf/dconf/: meson.build
conf/memconf/: meson.build
data/: Makefile.am  ibus.schemas.in  meson.build
data/dconf/: Makefile.am  ibus.convert  make-dconf-override-db.sh  meson.build  org.freedesktop.ibus.gschema.xml
data/icons/: meson.build
data/its/: meson.build
data/keymaps/: meson.build
docs/reference/: meson.build
docs/reference/ibus/: meson.build
engine/: Makefile.am  component.dtd  gensimple.py  iso639converter.py  meson.build  simple.xml.in  test-dead.py  test-gnome.py
ibus/: bus.py  common.py  config.py  inputcontext.py  meson.build  object.py  serializable.py
m4/: Makefile.am
po/: LINGUAS  POTFILES.in  ar.po  as.po  bg.po  bn.po  bn_IN.po  ca.po  cs.po  da.po  de.po  el.po  en_GB.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  gu.po  he.po  hi.po  hu.po  ia.po  ibus10.pot  id.po  it.po  ja.po  ka.po  kab.po  kk.po  kn.po  ko.po  lo.po  lv.po  ml.po  mn.po  mr.po  nb.po  nl.po  (+24 more)
portal/: meson.build
setup/: Makefile.am  ibus-setup.in  main.py  meson.build  setup-no_switch_shortcut.ui  setup.ui
src/: Makefile.am  emoji-parser.c  gencomposetable.c  get_system_langs.py  ibusaccelgroup.c  ibusbus.c  ibusbus.h  ibuscomponent.c  ibuscomposetable.c  ibusemojigen.h  ibusengine.c  ibusenginesimple.c  ibusenginesimple.h  ibusenginesimpleprivate.h  ibusinputcontext.c  ibusobservedpath.c  ibuspanelservice.c  ibusregistry.c  ibusservice.c  ibusservice.h  ibusshare.c  ibusshare.h  ibustext.c  ibustext.h  ibustypes.h  ibusunicode.c  ibusunicodegen.h  ibusutil.c  libibus.map  meson.build
src/compose/: meson.build  sequences-big-endian  sequences-little-endian
src/tests/: Makefile.am  ibus-compose-locales.in  ibus-compose.basic  ibus-compose.c  ibus-desktop-testing-autostart.in  ibus-desktop-testing-module  ibus-desktop-testing.desktop.in  ibus-keypress.c  ibus-share.c  meson.build  runtest  xkb-latin-layouts
test/: org.test.IBus.Fedoraproject.json  org.test.IBus.Freedesktop.json  org.test.IBus.GNOME.json  test_client.py
tools/: meson.build
ui/: meson.build
ui/gtk2/: candidatepanel.py  ibus-ui-gtk.in  panel.py
ui/gtk3/: Makefile.am  application.vala  bindingcommon.vala  candidatepanel.vala  emojier.vala  extension.vala  ibus-emoji.7.in  meson.build  message.vala  panel.vala  panelbinding.vala  pango.vala  propertypanel.vala  xml-to-c.py
util/: meson.build
util/IMdkit/: FrameMgr.c  Makefile.am  Xi18n.h  i18nIc.c  i18nOffsetCache.c  i18nX.c  meson.build
