option('tests',
  type: 'boolean',
  value: true,
  description: 'Build tests',
)
option('xim',
  type: 'feature',
  value: 'auto',
  description: 'Build XIM server',
)
option('wayland',
  type: 'feature',
  value: 'auto',
  description: 'Build wayland support',
)
option('appindicator',
  type: 'boolean',
  value: true,
  description: 'Build appindicator support',
)
option('engine',
  type: 'boolean',
  value: true,
  description: 'Build ibus simple engine',
)
option('ui',
  type: 'boolean',
  value: true,
  description: 'Build ibus default user interface',
)
option('socket-dir',
  type: 'string',
  value: '',
  description: 'The socket directory to connect ibus-daemon with D-Bus connections (default: "$XDG_CACHE_HOME/ibus", or "/tmp" on BSD systems.',
)
option('setup',
  type: 'boolean',
  value: true,
  description: 'Install the ibus setup UI',
)
# Supported GTK versions
option('gtk2',
  type: 'feature',
  value: 'auto',
  description: 'Build GTK2 IM Module',
)
option('gtk2-im-module-dir',
  type: 'string',
  value: '',
  description: 'Path to a custom GTK2 immodule dir (if empty, uses the default)',
)
option('gtk3',
  type: 'feature',
  value: 'auto',
  description: 'Build GTK3 IM Module',
)
option('gtk3-im-module-dir',
  type: 'string',
  value: '',
  description: 'Path to a custom GTK3 immodule dir (if empty, uses the default)',
)
option('gtk4',
  type: 'feature',
  value: 'auto',
  description: 'Build GTK4 IM Module',
)
option('gtk4-im-module-dir',
  type: 'string',
  value: '',
  description: 'Path to a custom GTK4 immodule dir (if empty, uses the default)',
)
# Configuration
option('memconf',
  type: 'boolean',
  value: false,
  description: 'Perform configure based on memory',
)
option('dconf',
  type: 'feature',
  value: 'auto',
  description: 'Perform configure based on dconf',
)
# Emoji / Unicode
option('emoji-dict',
  type: 'boolean',
  value: true,
  description: 'Build Emoji dict files',
)
option('unicode-dict',
  type: 'boolean',
  value: true,
  description: 'Build Unicode dict files',
)
option('unicode-emoji-dir',
  type: 'string',
  value: '/usr/share/unicode/emoji',
  description: 'Directory of Unicode Emoji',
)
option('ucd-dir',
  type: 'string',
  value: '/usr/share/unicode/ucd',
  description: 'Directory of UCD (Unicode Character Database) files',
)
option('emoji-annotation-dir',
  type: 'string',
  value: '/usr/share/unicode/cldr/common/annotations',
  description: 'Directory of CLDR annotation files',
)
# Snooper
option('snooper',
  type: 'boolean',
  value: true,
  description: 'Enable key snooper in GTK IM module',
)
option('no-snooper-apps',
  type: 'array',
  value: [
    'firefox.*',
    '.*chrome.*',
    '.*chromium.*',
    'terminator',
  ],
  description: 'Disable key snooper in these applications',
)
# Bindings
option('vapigen',
  type: 'feature',
  value: 'auto',
  description: 'Build with vapigen support',
)
option('pygobject',
  type: 'feature',
  value: 'auto',
  description: 'Build with pygobject support',
)
option('python2_lib',
  type: 'boolean',
  value: false,
  description: 'Build ibus Python 2 library'
)
