python.find_installation('python2').install_sources(
  '__init__.py',
  '_gtk.py',
  'application.py',
  'ascii.py',
  'attribute.py',
  'bus.py',
  'common.py',
  'component.py',
  'config.py',
  'engine.py',
  'enginedesc.py',
  'exception.py',
  'factory.py',
  'inputcontext.py',
  'keysyms.py',
  'lang.py',
  'lookuptable.py',
  'modifier.py',
  'notifications.py',
  'object.py',
  'observedpath.py',
  'panel.py',
  'property.py',
  'serializable.py',
  'text.py',
  'utility.py',
  subdir: 'ibus',
)
